Adicionado logs na aplicação e nova tela de informação sobre o app.

--- a/QR_scanner_zxing.csproj
+++ b/QR_scanner_zxing.csproj
@@ -94,6 +94,9 @@
 	  <MauiXaml Update="CharacteristicsDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="InfoPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="QRCodeScannerPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
